CREATE TABLE IF NOT EXISTS tb_booking_deposit_adjustment (
    id BIGINT PRIMARY KEY AUTO_INCREMENT,
    booking_code VARCHAR(50) NOT NULL,
    incident_id BIGINT NULL,
    user_id BIGINT NULL,
    shop_id BIGINT NOT NULL,
    status VARCHAR(20) NOT NULL DEFAULT 'OPEN',
    adjustment_type VARCHAR(20) NOT NULL,
    source VARCHAR(40) NOT NULL,
    current_deposit_total INT NOT NULL,
    proposed_deposit_total INT NOT NULL,
    delta_amount INT NOT NULL,
    proposed_date DATE NOT NULL,
    proposed_time VARCHAR(10) NOT NULL,
    proposed_table_type VARCHAR(20) NOT NULL DEFAULT 'normal',
    proposed_people INT NOT NULL,
    message VARCHAR(500) NULL,
    handling_note VARCHAR(500) NULL,
    handled_by_user_id BIGINT NULL,
    handled_at DATETIME NULL,
    applied_booking_update TINYINT(1) NOT NULL DEFAULT 0,
    created_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at DATETIME NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
    UNIQUE KEY uk_booking_deposit_adjustment_state (
        booking_code,
        proposed_date,
        proposed_time,
        proposed_table_type,
        proposed_people,
        delta_amount,
        status
    ),
    INDEX idx_deposit_adjustment_shop_status (shop_id, status, created_at),
    INDEX idx_deposit_adjustment_booking (booking_code),
    INDEX idx_deposit_adjustment_incident (incident_id)
);
